--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ dd {
             <dl>
                 <dt>Articles</dt>
                 <dd>
-                    <a href="./blogs/exports.md">About `exports.module` and `export` in node.js</a>
+                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/exports.md">Node.js系列之——module.exports与exorts</a>
                 </dd>
             </dl>
         </section>
