update home page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@ dd {
                 <dd>
                     <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/exports.md">Node.js系列之——module.exports与exorts</a>
                 </dd>
+                <dd>
+                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/exception_catch.md">Node.js系列之——异常捕获</a>
+                </dd>
             </dl>
         </section>
     </div>
