--- a/index.html
+++ b/index.html
@@ -45,10 +45,16 @@ dd {
             <dl>
                 <dt>Articles</dt>
                 <dd>
-                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/exports.md">Node.js系列之——module.exports与exorts</a>
+                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/frontend_knowledge.md" target="_blank">web前端知识汇聚</a>
                 </dd>
                 <dd>
-                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/exception_catch.md">Node.js系列之——异常捕获</a>
+                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/network.md" target="_blank">网络协议知识</a>
+                </dd>
+                <dd>
+                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/exports.md" target="_blank">Node.js系列之——module.exports与exorts</a>
+                </dd>
+                <dd>
+                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/exception_catch.md" target="_blank">Node.js系列之——异常捕获</a>
                 </dd>
             </dl>
         </section>
