add Promise.js for promise demo

--- a/demos/promise/browser.html
+++ b/demos/promise/browser.html
@@ -36,7 +36,7 @@
     <p id="done" style="display: none;">done!</p>
 
 <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
-<script src="https://github.com/chemdemo/promiseA/blob/master/lib/Promise.js"></script>
+<script src="Promise.js"></script>
 <script src="browser.js"></script>
 <script>
 
