add blog: vim.md

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@ dd {
                 <dd>
                     <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/stepify.md" target="_blank">stepify——轻松管理Node.js异步工作流</a>
                 </dd>
+                <dd>
+                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/vim.md" target="_blank">linux备忘录——vim篇</a>
+                </dd>
+                <dd>
+                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/promise.md" target="_blank">Promise是如此的优雅</a>
+                </dd>
             </dl>
         </section>
     </div>
