update readme and home page

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@ dd {
         </section>
 
         <section class="blogs">
-            <dl>
-                <dt>Articles</dt>
+            <h3>Issues list</h3>
+            <p><a href="https://github.com/chemdemo/chemdemo.github.io/issues">https://github.com/chemdemo/chemdemo.github.io/issues</a>
+            <!-- <dl>
+                <dt>Issues list</dt>
                 <dd>
                     <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/frontend_knowledge.md" target="_blank">web前端知识汇聚</a>
                 </dd>
@@ -65,7 +67,7 @@ dd {
                 <dd>
                     <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/promise.md" target="_blank">Promise是如此的优雅</a>
                 </dd>
-            </dl>
+            </dl> -->
         </section>
     </div>
 </body>
