--- a/demos/cookie_in_iframe/parent.html
+++ b/demos/cookie_in_iframe/parent.html
@@ -18,5 +18,6 @@
     writeCookie('foo', 'bar');
     </script>
     <iframe src="http://x.aaa.com/child.html"></iframe>
+    <!-- <iframe src="./child.html"></iframe> -->
 </body>
 </html>
