--- a/demos/grunt-usemin-demo/index.html
+++ b/demos/grunt-usemin-demo/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="img/clock.png" />
+    <img src="img/kefu.png" />
     <img src="img/clock.png?v=<!-- {$version} -->" />
     <img src="img/child/cart.png" />
     <img src="img/xx.jpg" />
