remove comment codes

--- a/index.html
+++ b/index.html
@@ -43,31 +43,9 @@ dd {
 
         <section class="blogs">
             <h3>Issues list</h3>
-            <p><a href="https://github.com/chemdemo/chemdemo.github.io/issues">https://github.com/chemdemo/chemdemo.github.io/issues</a>
-            <!-- <dl>
-                <dt>Issues list</dt>
-                <dd>
-                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/frontend_knowledge.md" target="_blank">web前端知识汇聚</a>
-                </dd>
-                <dd>
-                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/network.md" target="_blank">网络协议知识</a>
-                </dd>
-                <dd>
-                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/exports.md" target="_blank">Node.js系列之——module.exports与exorts</a>
-                </dd>
-                <dd>
-                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/exception_catch.md" target="_blank">Node.js系列之——异常捕获</a>
-                </dd>
-                <dd>
-                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/stepify.md" target="_blank">stepify——轻松管理Node.js异步工作流</a>
-                </dd>
-                <dd>
-                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/vim.md" target="_blank">linux备忘录——vim篇</a>
-                </dd>
-                <dd>
-                    <a href="https://github.com/chemdemo/chemdemo.github.io/blob/master/blogs/promise.md" target="_blank">Promise是如此的优雅</a>
-                </dd>
-            </dl> -->
+            <p>
+                <a href="https://github.com/chemdemo/chemdemo.github.io/issues">https://github.com/chemdemo/chemdemo.github.io/issues</a>
+            </p>
         </section>
     </div>
 </body>
