--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<link href="favicon.png" rel="Shortcut Icon" type="image/x-icon"/>
 <title>dmyang</title>
 <style type="text/css">
 body {
@@ -36,7 +38,6 @@ dd {
             <dl>
                 <dt>About me</dt>
                 <dd>github: <a href="https://github.com/chemdemo">https://github.com/chemdemo</a></dd>
-                <dd>blog: <a href="https://blog.dmfeel.com">https://blog.dmfeel.com</a></dd>
                 <dd>twitter: <a href="http://weibo.com/chemdemo">http://weibo.com/chemdemo</a></dd>
             </dl>
         </section>
@@ -49,5 +50,4 @@ dd {
         </section>
     </div>
 </body>
-<script></script>
 </html>
